--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <section id="main_content">
           <h3>
 <a id="map" class="anchor" href="#map" aria-hidden="true"><span class="octicon octicon-link"></span></a>Map</h3>
+Check out my <strong><a href='./map.html'>map of North Campus Open Space</a></strong>.
         </section>
 
         <footer>
